src/test/deca/context/invalid/sansobjet/lvalue_notpossible.deca
// Description : Test avec une lvalue d'assign qui n'est ni un field, param ou var.
// Resultat : Erreur ligne 5 : lvalue de nature type.

{
    int = 5;
}